[package]
name = "masof"
version = "0.2.0"
authors = ["Dan Aloni"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
crossterm = { version = "0.25", features = ["event-stream"] }
lazy_static = "1.4"
thiserror = "1"
unicode-width = "0.1"

[dev-dependencies]
bytes = "1"
futures = "0.3"
futures-timer = "2"
lazy_static = "1.4"
log = "0.4.8"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
regex = "1"
simple-logging = "2.0.2"
structopt = "0.3"
tokio = {version = "1", features = ["rt", "process", "io-util"]}
